--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<Title>1st Analysis</title>
+<link rel="shortcut icon" type="image/jpg" href="python-logo.png"/>
+</head>
 
 <body>
 	<h1>First analysis</h1>
 	<h2>Description of analysis</h2>
 		<p>Lorem ipsum dolor sit amet</p>
+		<img src="Untitled2.png" alt="pie chart" width="100%">
+
+		<iframe src="piechart.html" width="100%" height="500" style="border:1px solid black;">  </iframe>
+
+	<a href="https://github.com/plotly-dash-apps/101-static-website-example">code on github</a>
 </body>
 </html>
 
