--- a/del.html
+++ b/del.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-<Title>1st Analysis</title>
-<link rel="shortcut icon" type="image/jpg" href="python-logo.png"/>
-</head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
 
 <body>
 	<h1>First analysis</h1>
@@ -16,5 +15,5 @@
 
 	<a href="https://github.com/plotly-dash-apps/101-static-website-example">code on github</a>
 </body>
-</html>
 
+</html
