--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <h1>My First Bootstrap Page</h1>
   <p>This is some text.</p>
 </div>
+<img src="docs/touchman_figure2_ksm.jpg" alt="genomics">
+
 
 </body>
 </html>
