--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>My First Bootstrap Page</h1>
   <p>This is some text.</p>
 </div>
-<img src="docs/touchman_figure2_ksm.jpg" alt="genomics">
+<img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="genomics">
 
 
 </body>
